Enabled automatic source code clean-up with rewrite-maven-plugin